@@ -1,0 +1,11 @@
+2.8.19b_beta1-r19
+20080904
+2.8.95
+2_rc1
+20010421-r2345
+2.9.54.12.43.923.432.12.43.29
+1234567.7654321.1234567.7654321
+1234567.7654321.1234567.7654321b
+20080904b
+20080914b_alpha2
+20080914b_p1992-r12332
