@@ -5,12 +5,12 @@ if USE_VALGRIND
 endif
 
 TESTS = 01_lputil_intlen 01_lputil_splitstr 02_lpatom_parse 03_lpxpak	\
-04_lparchives
+04_lparchives 05_lpversion_parse
 
 check_PROGRAMS = $(TESTS)
 
 lp_objects = ../src/liblputil.o ../src/liblpatom.o ../src/liblpxpak.o	\
-../src/liblparchives.o
+../src/liblparchives.o ../src/liblpversion.o
 
 01_lputil_intlen_SOURCES = 01_lputil_intlen.c
 01_lputil_intlen_LDFLAGS = $(all_libraries)
@@ -31,6 +31,10 @@ lp_objects = ../src/liblputil.o ../src/liblpatom.o ../src/liblpxpak.o	\
 04_lparchives_SOURCES = 04_lparchives.c 04_lparchives.tbz2 04_lparchives.txt
 04_lparchives_LDFLAGS = $(all_libraries)
 04_lparchives_LDADD = $(lp_objects)
+
+05_lpversion_parse_SOURCES = 05_lpversion_parse.c
+05_lpversion_parse_LDFLAGS = $(all_libraries)
+05_lpversion_parse_LDADD = $(lp_objects)
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
